2010-10-16  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (validateApplyInvoke): When visiting the value
	used to set a property, use the property's language-specific type.

2010-10-14  Per Bothner  <per@bothner.com>

	* SlotSet.java (compileSet): If we have a setter method that returns
	non-void (presumably same as this), ignore the result.
	(getReturnType): Remove method - no longer needed.
	* CompileReflect.java (validateApplySlotSet): Set result type.

2010-10-06  Per Bothner  <per@bothner.com>

	* CompileArrays.java: Update for removed CInlineable#getReturnType.
	(getReturnType): Removed.
	(validateArrayNew, validateArrayLength, validateArrayGet,
	validateArraySet): New methods.
	* ArrayGet.java: Set validate-apply property.
	* ArrayLength.java: Likewise.
	* ArrayNew.java: Likewise.
	* ArraySet.java: Likewise.
	* CompileInvoke.java (validateApplyInvoke): Set type of expression.

2010-10-05  Per Bothner  <per@bothner.com>

	* OccurrenceType.java (convertValue): New method.

2010-10-04  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (selectApplicable): Use new checkIntValue and
	checkLongvalue methods in InlineCalls.

2010-10-01  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (checkKeywords): Also search for "add" methods.
	E.g. (define b (JButton action-listener: ...))
        gets implemented as: (define b ...) (b:addActionListener ...)
	(checkKeywords): Change parameter to ObjectType to avoid casting.
	* SlotSet.java (type1Array): Pre-allocated 1-element type array.

2010-09-30  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (hasKeywordArgument): New method.
	(validateApplyInvoke): Convert unnamed constructor arguments to
	calls to an "add" method.
	Make "visit" calls on  argument expressions be context-dependent.
	* ClassMethods.java (selectApplicable): New overloaded method.

2010-09-23  Per Bothner  <per@bothner.com>

	* SlotSet.java (apply): Handle the case where the "name" is actually